# SendMe

./: README.md  justfile  kind-cluster-config.yaml  package-lock.json  package.json  skaffold.yaml  stop
.github/: pull_request_template.md
.github/workflows/: lint.yaml
.zed/: settings.json
backend/: Containerfile  Dockerfile  README.md  extract-openapi.py  fly.toml  lint.just  package.json  pyproject.toml
backend/cross_paths/: __main__.py  api.py  schemas.py
backend/cross_paths/database/: engine.py
backend/cross_paths/modules/opportunities/: models.py  router.py  schemas.py
backend/send_me/: __main__.py  api.py  schemas.py
backend/send_me/authentication/: models.py  router.py  schemas.py
backend/send_me/database/: engine.py  models.py  router.py
backend/send_me/modules/authentication/: dependancy.py  dependencies.py  exceptions.py  helpers.py  models.py  router.py  schemas.py  utils.py
backend/send_me/modules/conversations/: models.py  router.py  schemas.py
backend/send_me/modules/messages/: models.py  router.py  schemas.py
backend/send_me/modules/opportunities/: models.py  opportunities.json  router.py  schemas.py
backend/send_me/modules/organizations/: models.py  organizations.json  router.py  schemas.py
backend/send_me/modules/seed/: router.py
backend/send_me/modules/static_data/: opportunities.json  organizations.json  users.json
backend/send_me/modules/tags/: models.py  router.py  schemas.py  tags.yaml
backend/send_me/modules/users/: models.py  router.py  schemas.py  users.json
frontend/: .gitignore  Containerfile  biome.json  index.html  lint.just  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/app/: main.tsx  root.tsx
frontend/public/: conversation.json
frontend/src/: main.tsx  routeTree.gen.ts
helm/: Chart.yaml  values.yaml
helm/templates/: backend.yaml  (+2 more)
(+94 files in other folders)
